--- a/backend/package.json
+++ b/backend/package.json
@@ -18,16 +18,17 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
-    "@types/better-sqlite3": "^7.6.10",
-    "nodemon": "^3.1.0",
-    "tsx": "^4.19.1",
+    "@types/supertest": "^6.0.3",
     "copyfiles": "^2.4.1",
+    "nodemon": "^3.1.0",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
   }
