--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.23",
     "typescript": "^5.4.5",
